fixed certain layout issues

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,5 @@
 body {
 	padding-top: 70px;
-	background-repeat: no-repeat;
-	background-position: center;
-	background-attachment: fixed;
-	background-image: url('../images/stock_photo.jpg');
 }
 
 .clearfix {
